--- a/view/template.html.twig
+++ b/view/template.html.twig
@@ -30,7 +30,26 @@
             </div>
         </nav>
     {% endblock %}
-    {% block head %}<h1>Mon titre</h1>{% endblock %}
+    {% block head %}
+        <!-- Header-->
+        <header class="bg-dark py-5">
+            <div class="container px-5">
+                <div class="row gx-5 justify-content-center">
+                    <div class="col-lg-6">
+                        <div class="text-center my-5">
+                            <h1 class="display-5 fw-bolder text-white mb-2">Voici la Page d'accueil de notre premier site en Twig </h1>
+
+                            <p class="lead text-white-50 mb-4">Ce site en MVC PHP OO est un exemple pour voir les bases de Twig pour les développeurs et les designeurs</p>
+                            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://github.com/WebDevCF2m2022/twig" target="_blank">Sur Github</a>
+                                <a class="btn btn-outline-light btn-lg px-4" href="https://twig.symfony.com/" target="_blank">Documentation Twig</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+    {% endblock %}
     {% block content %}<p>Mon contenu</p>{% endblock %}
     {% block footer %}<p>Mon footer</p>{% endblock %}
 {% endblock %}
@@ -39,8 +58,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-<!-- * *                               SB Forms JS                               * *-->
-<!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>{% endblock %}
