center and footer

--- a/view/template.html.twig
+++ b/view/template.html.twig
@@ -37,9 +37,10 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-6">
                         <div class="text-center my-5">
-                            <h1 class="display-5 fw-bolder text-white mb-2">Voici la Page d'accueil de notre premier site en Twig </h1>
+                            <h1 class="display-5 fw-bolder text-white mb-2">
+                                {% block h1 %}Voici la Page d'accueil de notre premier site en Twig {% endblock %}</h1>
 
-                            <p class="lead text-white-50 mb-4">Ce site en MVC PHP OO est un exemple pour voir les bases de Twig pour les développeurs et les designeurs</p>
+                            <p class="lead text-white-50 mb-4">{% block leadtext %}Ce site en MVC PHP OO est un exemple pour voir les bases de Twig pour les développeurs et les designeurs{% endblock %}</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://github.com/WebDevCF2m2022/twig" target="_blank">Sur Github</a>
                                 <a class="btn btn-outline-light btn-lg px-4" href="https://twig.symfony.com/" target="_blank">Documentation Twig</a>
@@ -50,8 +51,48 @@
             </div>
         </header>
     {% endblock %}
-    {% block content %}<p>Mon contenu</p>{% endblock %}
-    {% block footer %}<p>Mon footer</p>{% endblock %}
+    {% block content %}
+        <!-- Features section-->
+        <section class="py-5 border-bottom" id="features">
+            <div class="container px-5 my-5">
+                <div class="row gx-5">
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
+                        <h2 class="h4 fw-bolder">Featured title</h2>
+                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                        <a class="text-decoration-none" href="#!">
+                            Call to action
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
+                        <h2 class="h4 fw-bolder">Featured title</h2>
+                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                        <a class="text-decoration-none" href="#!">
+                            Call to action
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                        <h2 class="h4 fw-bolder">Featured title</h2>
+                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                        <a class="text-decoration-none" href="#!">
+                            Call to action
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    {% endblock %}
+    {% block footer %}
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Notre site Twig  {{ "now"|date("Y") }} </p></div>
+        </footer>
+    {% endblock %}
 {% endblock %}
 {% block javascripts %}
     <!-- Bootstrap core JS-->
