--- a/view/template.html.twig
+++ b/view/template.html.twig
@@ -61,9 +61,9 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
                         <h2 class="h4 fw-bolder">{{ item.thearticletitle }}</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                        <a class="text-decoration-none" href="#!">
-                            Call to action
+                        <p>{{ item.thearticleresume }}</p>
+                        <a class="text-decoration-none" href="/articles/{{ item.thearticleslug }}">
+                            Lire la suite
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
