--- a/view/public/public_homepage.html.twig
+++ b/view/public/public_homepage.html.twig
@@ -4,7 +4,7 @@
 {% block title %}{{ parent() }} | Homepage{% endblock %}
 {% block categ %}
     {% for item in mesSections %}
-    <li class="nav-item"><a class="nav-link" href="?">{{ item.thesectiontitle }}</a></li>
+    <li class="nav-item"><a class="nav-link" href="/sections/{{ item.thesectionslug }}">{{ item.thesectiontitle }}</a></li>
     {% endfor %}
 {% endblock %}
 
