--- a/view/public/public_thesection.html.twig
+++ b/view/public/public_thesection.html.twig
@@ -1,7 +1,7 @@
-{# view/public/public_homepage.html.twig #}
+{# view/public/public_thesection.html.twig #}
 {% extends 'template.html.twig' %}
 
-{% block title %}{{ parent() }} | Homepage{% endblock %}
+{% block title %}{{ parent() }} | Section : {% endblock %}
 {% block categ %}
     {% include 'public/menu.html.twig' %}
 {% endblock %}
