section title and desc

--- a/view/public/public_thesection.html.twig
+++ b/view/public/public_thesection.html.twig
@@ -5,4 +5,10 @@
 {% block categ %}
     {% include 'public/menu.html.twig' %}
 {% endblock %}
+{% block h1 %}
+Section : {{ maSection.thesectiontitle }}
+{% endblock %}
+{%  block leadtext %}
+{{ maSection.thesectiondesc }}
+{% endblock %}
 
