template.html.twig

--- a/view/base.html.twig
+++ b/view/base.html.twig
@@ -7,7 +7,7 @@ seront les seuls modifiables par les vues enfants.
 <!DOCTYPE html>
 <html lang="fr">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
+<link rel="icon" type="image/x-icon" href="{{ base_url }}favicon.ico" />
     <head>
     <meta charset="UTF-8">
         <title>{% block title %}Twig{% endblock %}</title>
