--- a/view/public/public_thesection.html.twig
+++ b/view/public/public_thesection.html.twig
@@ -12,6 +12,21 @@ Section : {{ maSection.thesectiontitle }}
 {{ maSection.thesectiondesc }}
 {% endblock %}
 {% block articles %}
+    {% if mesArticles is empty %}
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="fw-bolder">Pas encore d'articles dans la section {{ maSection.thesectiontitle }}</h2>
+            </div>
+            <hr>
+        </div>
+    {% else %}
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="fw-bolder">{{  }}Articles dans la section {{ maSection.thesectiontitle }}</h2>
+            </div>
+            <hr>
+        </div>
+    {% endif %}
     {% for item in mesArticles %}
         <div class="col-lg-4 mb-5 mb-lg-0">
             <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
