--- a/view/public/public_thesection.html.twig
+++ b/view/public/public_thesection.html.twig
@@ -31,7 +31,7 @@ Section : {{ maSection.thesectiontitle }}
         <div class="col-lg-4 mb-5 mb-lg-0">
             <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
             <h2 class="h4 fw-bolder">{{ item.thearticletitle }}</h2>
-            <p>{{ item.thearticleresume }}</p>
+            <p>{{ item.thearticleresume|u.truncate(120, '...', false) }}</p>
             <a class="text-decoration-none" href="/articles/{{ item.thearticleslug }}">
                 Lire la suite
                 <i class="bi bi-arrow-right"></i>
