--- a/view/public/menu.html.twig
+++ b/view/public/menu.html.twig
@@ -1,4 +1,4 @@
+{# Menu public #}
 {% for item in mesSections %}
     <li class="nav-item"><a class="nav-link" href="/sections/{{ item.thesectionslug }}">{{ item.thesectiontitle }}</a></li>
 {% endfor %}
-<li class="nav-item"><a class="nav-link" href="{{ racine }}connect">Connexion</a></li>
