--- a/view/base.html.twig
+++ b/view/base.html.twig
@@ -5,7 +5,7 @@ Les block comme
 seront les seuls modifiables par les vues enfants.
 #}
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="{% block lang %}fr{% endblock %}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <link rel="icon" type="image/x-icon" href="{{ base_url }}favicon.ico" />
     <head>
