--- a/view/template.html.twig
+++ b/view/template.html.twig
@@ -25,6 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
                         {% endblock %}
+                        <li class="nav-item"><a class="nav-link" href="{{ racine }}connect">Connexion</a></li>
                     </ul>
                 </div>
             </div>
